--- a/_html/index.html
+++ b/_html/index.html
@@ -20,7 +20,7 @@
 <div class="item">
     <img src="/images/American Curl.avif" class="item--image" />
     <div class="item--name">Gato American Curl</div>
-    <div class="item--color">Cor: Tigrado, Branco, Preto, Tricolor</div>
+    <div class="item--color">Cor: Tigrado, Branco, Preto</div>
     <div class="item--genre">Gênero: Masculino</div>
 </div>
 <div class="item">
@@ -50,7 +50,7 @@
 <div class="item">
     <img src="images/pelo curto americano.jpg" class="item--image" />
     <div class="item--name">Gato Pelo Curto Americano</div>
-    <div class="item--color">Cor: Branco, Preto e Amarelo</div>
+    <div class="item--color">Cor: Preto e Marrom</div>
     <div class="item--genre">Gênero: Feminino</div>
 </div>
 <div class="item">
@@ -68,19 +68,19 @@
 <div class="item">
     <img src="/images/Somali.jpeg" class="item--image" />
     <div class="item--name">Gato Somali</div>
-    <div class="item--color">Cor: Vermelho e Azul</div>
+    <div class="item--color">Cor: Jaspeado</div>
     <div class="item--genre">Gênero: Masculino</div>
 </div>
 <div class="item">
     <img src="/images/sphynx.jpg" class="item--image" />
     <div class="item--name">Gato Sphynx</div>
-    <div class="item--color">Cor: Laranja</div>
+    <div class="item--color">Cor: Camurça e pêssego</div>
     <div class="item--genre">Gênero: Masculino</div>
 </div>
 <div class="item">
     <img src="/images/azul russo.png" class="item--image" />
     <div class="item--name">Gato Azul Russo</div>
-    <div class="item--color">Cor: Verde e Branco</div>
+    <div class="item--color">Cor: azul-acinzentada</div>
     <div class="item--genre">Gênero: Masculino</div>
 </div>
 <div class="item">
